# Boron

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/Boron/: ArrayData.hpp  ByteArray.hpp  Common.hpp  Global.hpp  Numeric.hpp
src/: ArrayData.cpp  ByteArray.cpp  ByteArrayAlgorithms.cpp  ByteArrayAlgorithms.hpp  CMakeLists.txt
test/: ByteArrayTest.cpp  CMakeLists.txt
